alteração do titulo html

--- a/tips.html
+++ b/tips.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Calculadora de Gorjeta</title>
+	<title>Calculadora de Tips</title>
 	<link rel="stylesheet" type="text/css" href="tips.css">
 </head>
 <body>
